z-index fix for CKEditor

--- a/css/jquery_ui_dialog.main.css
+++ b/css/jquery_ui_dialog.main.css
@@ -9,7 +9,7 @@
 }
 
 .jquery_ui_dialog-dialog-wrapper {
-	z-index:1000;
+	z-index:10001;
 }
 
 .ui-widget-overlay {
